--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,4 @@
+<h1>Page not found</h1>
 <p>
-  page-not-found works!
+    Sorry, this route doesn't exist. <a href="./welcome">Go back to the homepage</a>
 </p>
