--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,8 @@
-<p>
-  welcome works!
-</p>
+<md-sidenav-container>
+    <md-sidenav mode="side" opened>
+        Sidenav
+    </md-sidenav>
+    <div class="content">
+        Page Content
+    </div>
+</md-sidenav-container>
