--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+body {
+    background: white;
+    margin: 0px;
+}
+
+md-card {
+    max-width: 80%;
+    margin: 2em auto;
+    text-align: center;
+}
+
+md-toolbar-row {
+    justify-content: space-between;
+}
+
+md-tab-group {
+    padding: 2em auto;
+    text-align: center;
+}
+
+md-tab-body {
+    padding: 2em;
+    background: lightgray;
+}
+
+md-grid-tile {
+    background: lightblue;
+}
+
+.done {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    color: white;
+}
