most of site built

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,8 +1,12 @@
-<md-sidenav-container>
-    <md-sidenav mode="side" opened>
-        Sidenav
-    </md-sidenav>
-    <div class="content">
-        Page Content
-    </div>
-</md-sidenav-container>
+<div class="pageContent">
+    <md-card class="about-card">
+        <img md-card-image src="assets/img/sq_web.jpg">
+        <h2>About Me</h2>
+        <md-card-content>
+            <p>
+                I am a Senior Front End Development professional with 19+ years of experience in concepting, designing and implementing interactive web sites and applications. As a leader, I use a wide range of technologies, problem-solving skills and effective communication
+                between technical and non-technical stakeholders.
+            </p>
+        </md-card-content>
+    </md-card>
+</div>
