--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div>
     <md-toolbar color="primary">
         <md-toolbar-row>
-            <span>Custom Toolbar</span>
+            <span>Brian Wilgus</span>
             <span class="example-spacer"></span>
             <button md-button [mdMenuTriggerFor]="appMenu"><md-icon>more_vert</md-icon> Menu</button>
         </md-toolbar-row>
@@ -9,49 +9,11 @@
     </md-toolbar>
 
     <md-menu #appMenu="mdMenu">
-        <button md-menu-item> Settings </button>
-        <button md-menu-item> Help </button>
+        <button md-menu-item routerLink="/about"><md-icon>face</md-icon>About Me</button>
+        <button md-menu-item routerLink="/skills"><md-icon>computer</md-icon>Skills</button>
+        <button md-menu-item routerLink="/work-history"><md-icon>business_center</md-icon>Work History</button>
+        <button md-menu-item routerLink="/contact"><md-icon>mail_outline</md-icon>Contact</button>
     </md-menu>
 
-    <!-- swaps sections on page -->
-    <md-tab-group dynamicHeight="0">
-        <md-tab label="About">
-            <h2>About</h2>
-            <h1>I build awesome stuff and I am looking for something great to be a part of.</h1>
-            <md-grid-list cols="2" rowHeight="2:1">
-                <md-grid-tile>1</md-grid-tile>
-                <md-grid-tile>2</md-grid-tile>
-                <md-grid-tile>3</md-grid-tile>
-                <md-grid-tile>4</md-grid-tile>
-            </md-grid-list>
-        </md-tab>
-        <md-tab label="Work">
-            <h2>Work</h2>
-            <md-card>
-                <button md-button>All</button>
-                <button md-raised-button>Of</button>
-                <button md-raised-button color="primary">The</button>
-                <button md-raised-button color="accent">Buttons</button>
-            </md-card>
-        </md-tab>
-        <md-tab label="Contact">
-            <h2>Contact</h2>
-            <p>Lorem ipsum est...</p>
-        </md-tab>
-    </md-tab-group>
-
-    <!-- changes router-outlet via click events -->
-    <nav md-tab-nav-bar>
-        <a md-tab-link><i class="fa fa-home fa-fw" aria-hidden="true"></i> Link 1</a>
-        <a md-tab-link><i class="fa fa-book fa-fw" aria-hidden="true"></i> Link 2</a>
-        <a md-tab-link [active]="true"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>Link 3</a>
-    </nav>
-
     <router-outlet></router-outlet>
-
-    <span class="done">
-        <button md-fab>
-        <md-icon>check circle</md-icon>
-        </button>
-    </span>
 </div>
