--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,4 +1,9 @@
-<h1>Page not found</h1>
-<p>
-    Sorry, this route doesn't exist. <a href="./welcome">Go back to the homepage</a>
-</p>
+<div class="pageContent">
+    <md-card class="skill-card">
+        <img md-card-image src="assets/img/keyboard1.jpeg">
+        <h2>Page not found</h2>
+        <md-card-content>
+            Sorry, this route doesn't exist. <a href="./welcome">Go back to the homepage</a>
+        </md-card-content>
+    </md-card>
+</div>
