--- a/src/styles.css
+++ b/src/styles.css
@@ -2,14 +2,14 @@
 
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 body {
-    background: white;
+    background: lightgray;
     margin: 0px;
 }
 
 md-card {
     max-width: 80%;
     margin: 2em auto;
-    text-align: center;
+    text-align: left;
 }
 
 md-toolbar-row {
@@ -21,7 +21,7 @@ md-tab-group {
     text-align: center;
 }
 
-md-tab-body {
+.pageContent {
     padding: 2em;
     background: lightgray;
 }
@@ -30,9 +30,49 @@ md-grid-tile {
     background: lightblue;
 }
 
+button.mat-raised-button {
+    background-color: azure;
+}
+
 .done {
     position: fixed;
     bottom: 20px;
     right: 20px;
     color: white;
+}
+
+.skill-card,
+.about-card {
+    width: 500px;
+}
+
+.about-header-image {
+    background-image: url('/assets/img/web.png');
+    background-size: cover;
+}
+
+.keyboard1-header-image {
+    background-image: url('/assets/img/keyboard1_thin.jpeg');
+    background-size: cover;
+}
+
+.keyboard2-header-image {
+    background-image: url('/assets/img/keyboard2.jpeg');
+    background-size: cover;
+}
+
+.my-header-image {
+    background-image: url('/assets/img/sq_web.jpg');
+    background-size: cover;
+    width: 100px;
+    height: 100px;
+}
+
+.contact-links {
+    padding: 1em;
+}
+
+.mat-button-wrapper.img {
+    height: 40px;
+    width: 40px;
 }
