fixed contact page

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,14 +1,13 @@
 <div class="pageContent">
-    <md-card class="about-card">
-        <img md-card-image src="assets/img/city_thin.jpg">
+    <md-card class="contact-card">
+        <!-- <img md-card-image src="assets/img/city_thin.jpg"> -->
         <h2>Contact Me</h2>
         <md-card-content>
             <div>
-                <a href="https://goo.gl/maps/9hxhKmTaSZo">
+                <a href="assets/pdf/Brian Wilgus Developer Resume 2017.pdf">
                     <button md-button class="contact-links">
-                  <md-icon>place</md-icon> Atlanta, Georgia USA
-                </button>
-                </a>
+                <md-icon>file_download</md-icon> resume (in pdf format)
+            </button></a>
             </div>
             <div>
                 <a href="mailto:brianawilgus@gmail.com">
@@ -25,16 +24,23 @@
             </div>
             <div>
                 <a href="https://www.linkedin.com/in/brian-wilgus-96b9b922/">
-                    <button md-button class="contact-links"><img style="width:20px;height:20;" src="assets/img/linkedin.jpg" /> 
+                    <button md-button class="contact-links"><img class="img-icon" src="assets/img/linkedin.jpg" /> 
                 linkedin
             </button>
                 </a>
             </div>
             <div>
                 <a href="https://www.facebook.com/CheTrooper">
-                    <button md-button class="contact-links"><img style="width:20px;height:20;" src="assets/img/facebook.png" /> 
+                    <button md-button class="contact-links"><img class="img-icon" src="assets/img/facebook.png" /> 
                 facebook
             </button></a>
+            </div>
+            <div>
+                <a href="https://goo.gl/maps/9hxhKmTaSZo">
+                    <button md-button class="contact-links">
+                  <md-icon>place</md-icon> Atlanta, Georgia USA
+                </button>
+                </a>
             </div>
 
         </md-card-content>
