history added back

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
         <md-sidenav #sidenav class="sidenav" (click)="sidenav.close()">
             <button md-menu-item routerLink="/about"><md-icon>face</md-icon>About Me</button>
             <button md-menu-item routerLink="/skills"><md-icon>computer</md-icon>Skills</button>
-            <!-- <button md-menu-item routerLink="/work-history"><md-icon>business_center</md-icon>Work History</button> -->
+            <button md-menu-item routerLink="/work-history"><md-icon>business_center</md-icon>Work History</button>
             <button md-menu-item routerLink="/contact"><md-icon>mail_outline</md-icon>Contact</button>
         </md-sidenav>
 
@@ -19,7 +19,7 @@
         <md-menu #appMenu="mdMenu">
             <button md-menu-item routerLink="/about"><md-icon>face</md-icon>About Me</button>
             <button md-menu-item routerLink="/skills"><md-icon>computer</md-icon>Skills</button>
-            <!-- <button md-menu-item routerLink="/work-history"><md-icon>business_center</md-icon>Work History</button> -->
+            <button md-menu-item routerLink="/work-history"><md-icon>business_center</md-icon>Work History</button>
             <button md-menu-item routerLink="/contact"><md-icon>mail_outline</md-icon>Contact</button>
         </md-menu>
 
