--- a/src/app/work-history/work-history.component.html
+++ b/src/app/work-history/work-history.component.html
@@ -3,15 +3,95 @@
         <img md-card-image src="assets/img/city_thin.jpg">
         <h2>Work History</h2>
         <md-card-content>
-            <p>
-                I build awesome stuff and I am looking for something great to be a part of.
-            </p>
-            <md-grid-list cols="2" rowHeight="2:1">
-                <md-grid-tile>1</md-grid-tile>
-                <md-grid-tile>2</md-grid-tile>
-                <md-grid-tile>3</md-grid-tile>
-                <md-grid-tile>4</md-grid-tile>
-            </md-grid-list>
+            <h4>
+                A brief summary of the teams I am proud to have been a part of in my career.
+            </h4>
+            <md-accordion>
+                <md-expansion-panel expanded="true">
+                    <md-expansion-panel-header>
+                        <md-panel-title>
+                            Equifax, Inc
+                        </md-panel-title>
+                    </md-expansion-panel-header>
+                    <img src="assets/img/equifax_logo.png" class="workLogo">
+                    <div class="workTitle">IT Architect</div>
+                    <div class="workPeriod">Dec 2013 to Present</div>
+                    <div class="workLocation">Alpharetta, Georgia</div>
+                    <div>
+                        Technical Lead for multiple high performing scrum teams. Reliably Design, Architect and Implement new solutions. Cross train multiple resources across teams, locales and business units. Perform Sprint work in a deadline oriented environment. Utilize Open
+                        Source Libraries and Frameworks where possible. Focus on Security, stability and reuse of components. Responsible for Production Support as well as enhancements and updates to existing platform assets.
+                    </div>
+                </md-expansion-panel>
+                <md-expansion-panel>
+                    <md-expansion-panel-header>
+                        <md-panel-title>
+                            Snapverse, Inc
+                        </md-panel-title>
+                    </md-expansion-panel-header>
+                    <img src="assets/img/snapverse.png" class="workLogo">
+                    <div class="workTitle">Web Developer, Contract</div>
+                    <div class="workPeriod">Jun 2013 to Dec 2013</div>
+                    <div class="workLocation">Remote</div>
+                    <div>
+                        Full stack web development. PHP, Javascript, jQuery, HTML5, CSS3.
+                    </div>
+                </md-expansion-panel>
+                <md-expansion-panel>
+                    <md-expansion-panel-header>
+                        <md-panel-title>
+                            Hi-Rez Studios
+                        </md-panel-title>
+                    </md-expansion-panel-header>
+                    <img src="assets/img/hirez.png" class="workLogo">
+                    <div class="workTitle">User Interface Developer</div>
+                    <div class="workPeriod">Feb 2011 to May 2013</div>
+                    <div class="workLocation">Alpharetta, Georgia</div>
+                    <div>
+                        UX, Design & Development of User Interfaces (HUD, Front End Menus, Reticules, etc) for Unreal Engine using Actionscript/Scaleform. Shipped Tribes:Ascend, SMITE.
+                    </div>
+                </md-expansion-panel>
+                <md-expansion-panel>
+                    <md-expansion-panel-header>
+                        <md-panel-title>
+                            Wiretree
+                        </md-panel-title>
+                    </md-expansion-panel-header>
+                    <img src="assets/img/wiretree.png" class="workLogo">
+                    <div class="workTitle">Flex Developer</div>
+                    <div class="workPeriod">Jun 2009 to Feb 2011</div>
+                    <div class="workLocation">Atlanta, Georgia</div>
+                    <div>
+                        built prototype systems for tablets and web. connected multiple APIs and backends to Flex and AIR driven solutions.
+                    </div>
+                </md-expansion-panel>
+                <md-expansion-panel>
+                    <md-expansion-panel-header>
+                        <md-panel-title>
+                            LBi
+                        </md-panel-title>
+                    </md-expansion-panel-header>
+                    <img src="assets/img/lbi.png" class="workLogo">
+                    <div class="workTitle">Flash Developer</div>
+                    <div class="workPeriod">Mar 2008 to Mar 2009</div>
+                    <div class="workLocation">Atlanta, Georgia</div>
+                    <div>
+                        Flash web development. Clients include: Graco Baby, Honda Marine, Bayer Pharmaceutical, High Carolina.
+                    </div>
+                </md-expansion-panel>
+                <md-expansion-panel>
+                    <md-expansion-panel-header>
+                        <md-panel-title>
+                            Full Circle Productions
+                        </md-panel-title>
+                    </md-expansion-panel-header>
+                    <div class="workTitle">Senior Interactive Developer</div>
+                    <div class="workPeriod">Sep 2006 to Mar 2008</div>
+                    <div class="workLocation">Atlanta, Georgia</div>
+                    <div>
+                        Flash Developer, Animation, PHP, MySQL, Unix based web ops, UX/UI Design, Email broadcasting
+                    </div>
+                </md-expansion-panel>
+            </md-accordion>
         </md-card-content>
     </md-card>
 </div>
