--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,39 +3,39 @@
         <!-- <img md-card-image src="assets/img/city_thin.jpg"> -->
         <h2>Contact Me</h2>
         <md-card-content>
-            <div>
+            <div class="contactLinks">
                 <a href="assets/pdf/Brian Wilgus Developer Resume 2017.pdf">
                     <button md-button class="contact-links">
                 <md-icon>file_download</md-icon> resume (in pdf format)
             </button></a>
             </div>
-            <div>
+            <div class="contactLinks">
                 <a href="mailto:brianawilgus@gmail.com">
                     <button md-button class="contact-links">
                 <md-icon>mail_outline</md-icon> brianawilgus@gmail.com
             </button></a>
             </div>
-            <div>
+            <div class="contactLinks">
                 <a href="tel:1-770-713-4951">
                     <button md-button class="contact-links">
                 <md-icon>phone_iphone</md-icon> 770.713.4951
             </button>
                 </a>
             </div>
-            <div>
+            <div class="contactLinks">
                 <a href="https://www.linkedin.com/in/brian-wilgus-96b9b922/">
                     <button md-button class="contact-links"><img class="img-icon" src="assets/img/linkedin.jpg" /> 
                 linkedin
             </button>
                 </a>
             </div>
-            <div>
+            <div class="contactLinks">
                 <a href="https://www.facebook.com/CheTrooper">
                     <button md-button class="contact-links"><img class="img-icon" src="assets/img/facebook.png" /> 
                 facebook
             </button></a>
             </div>
-            <div>
+            <div class="contactLinks">
                 <a href="https://goo.gl/maps/9hxhKmTaSZo">
                     <button md-button class="contact-links">
                   <md-icon>place</md-icon> Atlanta, Georgia USA
