--- a/src/styles.css
+++ b/src/styles.css
@@ -83,6 +83,10 @@ md-grid-tile {
     margin-bottom: 12px;
 }
 
+.contactLinks {
+    width: 100%;
+}
+
 md-panel-title {
     font: bold 24px Roboto, "Helvetica Neue", sans-serif;
     padding: 1em 0em;
