--- a/src/app/work-history/work-history.component.html
+++ b/src/app/work-history/work-history.component.html
@@ -13,13 +13,15 @@
                             Equifax, Inc
                         </md-panel-title>
                     </md-expansion-panel-header>
-                    <img src="assets/img/equifax_logo.png" class="workLogo">
-                    <div class="workTitle">IT Architect</div>
-                    <div class="workPeriod">Dec 2013 to Present</div>
-                    <div class="workLocation">Alpharetta, Georgia</div>
+                    <div class="clearfix">
+                        <img src="assets/img/equifax_logo.png" class="workLogo">
+                        <div class="workTitle">IT Architect</div>
+                        <div class="workPeriod">Dec 2013 to Present</div>
+                        <div class="workLocation">Alpharetta, Georgia</div>
+                    </div>
                     <div>
-                        Technical Lead for multiple high performing scrum teams. Reliably Design, Architect and Implement new solutions. Cross train multiple resources across teams, locales and business units. Perform Sprint work in a deadline oriented environment. Utilize Open
-                        Source Libraries and Frameworks where possible. Focus on Security, stability and reuse of components. Responsible for Production Support as well as enhancements and updates to existing platform assets.
+                        Technical Lead for multiple high performing scrum teams. Reliably Design, Architect and Implement new solutions for stakeholders. Cross train multiple resources across teams, locales and business units. Perform Sprint work in a deadline-oriented environment.
+                        Utilize Open Source Libraries and Frameworks whenever possible. Focus on Security, stability and reuse of components. Responsible for Production Support as well as enhancements and updates to existing platform assets.
                     </div>
                 </md-expansion-panel>
                 <md-expansion-panel>
@@ -28,12 +30,14 @@
                             Snapverse, Inc
                         </md-panel-title>
                     </md-expansion-panel-header>
-                    <img src="assets/img/snapverse.png" class="workLogo">
-                    <div class="workTitle">Web Developer, Contract</div>
-                    <div class="workPeriod">Jun 2013 to Dec 2013</div>
-                    <div class="workLocation">Remote</div>
+                    <div class="clearfix">
+                        <img src="assets/img/snapverse.png" class="workLogo">
+                        <div class="workTitle">Web Developer, Contract</div>
+                        <div class="workPeriod">Jun 2013 to Dec 2013</div>
+                        <div class="workLocation">Remote</div>
+                    </div>
                     <div>
-                        Full stack web development. PHP, Javascript, jQuery, HTML5, CSS3.
+                        Full stack web development. PHP, Javascript, jQuery, HTML5, CSS3. Streaming video service with social media ties. Website being built alongside Native App.
                     </div>
                 </md-expansion-panel>
                 <md-expansion-panel>
@@ -42,12 +46,14 @@
                             Hi-Rez Studios
                         </md-panel-title>
                     </md-expansion-panel-header>
-                    <img src="assets/img/hirez.png" class="workLogo">
-                    <div class="workTitle">User Interface Developer</div>
-                    <div class="workPeriod">Feb 2011 to May 2013</div>
-                    <div class="workLocation">Alpharetta, Georgia</div>
+                    <div class="clearfix">
+                        <img src="assets/img/hirez.png" class="workLogo">
+                        <div class="workTitle">User Interface Developer</div>
+                        <div class="workPeriod">Feb 2011 to May 2013</div>
+                        <div class="workLocation">Alpharetta, Georgia</div>
+                    </div>
                     <div>
-                        UX, Design & Development of User Interfaces (HUD, Front End Menus, Reticules, etc) for Unreal Engine using Actionscript/Scaleform. Shipped Tribes:Ascend, SMITE.
+                        UX, Design & Development of User Interfaces (HUD, Front End Menus, Reticules, etc) for Unreal Engine using Actionscript/Scaleform. Shipped Tribes:Ascend, SMITE. Deadline focused, free-to-play game distributed via Steam.
                     </div>
                 </md-expansion-panel>
                 <md-expansion-panel>
@@ -56,12 +62,14 @@
                             Wiretree
                         </md-panel-title>
                     </md-expansion-panel-header>
-                    <img src="assets/img/wiretree.png" class="workLogo">
-                    <div class="workTitle">Flex Developer</div>
-                    <div class="workPeriod">Jun 2009 to Feb 2011</div>
-                    <div class="workLocation">Atlanta, Georgia</div>
+                    <div class="clearfix">
+                        <img src="assets/img/wiretree.png" class="workLogo">
+                        <div class="workTitle">Flex Developer</div>
+                        <div class="workPeriod">Jun 2009 to Feb 2011</div>
+                        <div class="workLocation">Atlanta, Georgia</div>
+                    </div>
                     <div>
-                        built prototype systems for tablets and web. connected multiple APIs and backends to Flex and AIR driven solutions.
+                        built prototype systems for tablets and web using Flex, AIR and .NET. connected multiple APIs and backends to Flex and AIR driven solutions.
                     </div>
                 </md-expansion-panel>
                 <md-expansion-panel>
@@ -70,10 +78,12 @@
                             LBi
                         </md-panel-title>
                     </md-expansion-panel-header>
-                    <img src="assets/img/lbi.png" class="workLogo">
-                    <div class="workTitle">Flash Developer</div>
-                    <div class="workPeriod">Mar 2008 to Mar 2009</div>
-                    <div class="workLocation">Atlanta, Georgia</div>
+                    <div class="clearfix">
+                        <img src="assets/img/lbi.png" class="workLogo">
+                        <div class="workTitle">Flash Developer</div>
+                        <div class="workPeriod">Mar 2008 to Mar 2009</div>
+                        <div class="workLocation">Atlanta, Georgia</div>
+                    </div>
                     <div>
                         Flash web development. Clients include: Graco Baby, Honda Marine, Bayer Pharmaceutical, High Carolina.
                     </div>
@@ -84,9 +94,11 @@
                             Full Circle Productions
                         </md-panel-title>
                     </md-expansion-panel-header>
-                    <div class="workTitle">Senior Interactive Developer</div>
-                    <div class="workPeriod">Sep 2006 to Mar 2008</div>
-                    <div class="workLocation">Atlanta, Georgia</div>
+                    <div class="clearfix">
+                        <div class="workTitle">Senior Interactive Developer</div>
+                        <div class="workPeriod">Sep 2006 to Mar 2008</div>
+                        <div class="workLocation">Atlanta, Georgia</div>
+                    </div>
                     <div>
                         Flash Developer, Animation, PHP, MySQL, Unix based web ops, UX/UI Design, Email broadcasting
                     </div>
