--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<ngbox></ngbox>
 <div class="page-container">
     <md-sidenav-container>
         <md-toolbar color="primary" (click)="sidenav.open()">
@@ -9,18 +10,20 @@
         </md-toolbar>
 
         <md-sidenav #sidenav class="sidenav" (click)="sidenav.close()">
-            <button md-menu-item routerLink="/about"><md-icon>face</md-icon>About Me</button>
-            <button md-menu-item routerLink="/skills"><md-icon>computer</md-icon>Skills</button>
-            <button md-menu-item routerLink="/work-history"><md-icon>business_center</md-icon>Work History</button>
-            <button md-menu-item routerLink="/contact"><md-icon>mail_outline</md-icon>Contact</button>
+            <button md-menu-item routerLink="/about"><md-icon>perm_identity</md-icon>About Me</button>
+            <button md-menu-item routerLink="/skills"><md-icon>create</md-icon>Skills</button>
+            <button md-menu-item routerLink="/work-history"><md-icon>work</md-icon>Work History</button>
+            <button md-menu-item routerLink="/portfolio"><md-icon>collections</md-icon>Portfolio</button>
+            <button md-menu-item routerLink="/contact"><md-icon>local_phone</md-icon>Contact</button>
         </md-sidenav>
 
 
         <md-menu #appMenu="mdMenu">
-            <button md-menu-item routerLink="/about"><md-icon>face</md-icon>About Me</button>
-            <button md-menu-item routerLink="/skills"><md-icon>computer</md-icon>Skills</button>
-            <button md-menu-item routerLink="/work-history"><md-icon>business_center</md-icon>Work History</button>
-            <button md-menu-item routerLink="/contact"><md-icon>mail_outline</md-icon>Contact</button>
+            <button md-menu-item routerLink="/about"><md-icon>perm_identity</md-icon>About Me</button>
+            <button md-menu-item routerLink="/skills"><md-icon>create</md-icon>Skills</button>
+            <button md-menu-item routerLink="/work-history"><md-icon>work</md-icon>Work History</button>
+            <button md-menu-item routerLink="/portfolio"><md-icon>collections</md-icon>Portfolio</button>
+            <button md-menu-item routerLink="/contact"><md-icon>local_phone</md-icon>Contact</button>
         </md-menu>
 
         <router-outlet></router-outlet>
