--- a/src/styles.css
+++ b/src/styles.css
@@ -109,6 +109,13 @@ md-expansion-panel-header {
     display: table;
 }
 
+.portfolioThumbnail {
+    margin: 10px;
+    outline: 1px solid rgba(66, 66, 66, 0.13);
+    outline-offset: 2px;
+    cursor: pointer;
+}
+
 @media only screen and (max-width: 400px) {
     md-card {
         max-width: 100%;
